Backed out 7 changesets (bug 1610741, bug 1816948, bug 1596847) for causing xpcshell failures in test_dooh.js CLOSED TREE
Backed out changeset 8596bc4554df (bug 1610741)
Backed out changeset 1a9baaa49d3d (bug 1816948)
Backed out changeset d72b9cdfbb1e (bug 1596847)
Backed out changeset e2e564f584b3 (bug 1610741)
Backed out changeset e9e331ccc7ab (bug 1610741)
Backed out changeset 44218f91e7cf (bug 1610741)
Backed out changeset 6f296319409a (bug 1610741)

--- a/browser/components/preferences/main.inc.xhtml
+++ b/browser/components/preferences/main.inc.xhtml
@@ -786,6 +786,7 @@
             is="highlightable-button"
             class="accessory-button"
             data-l10n-id="network-proxy-connection-settings"
+            searchkeywords="doh trr"
             search-l10n-ids="
               connection-window2.title,
               connection-proxy-option-no.label,
@@ -805,6 +806,8 @@
               connection-proxy-reload.label,
               connection-proxy-autologin.label,
               connection-proxy-socks-remote-dns.label,
+              connection-dns-over-https.label,
+              connection-dns-over-https-url-custom.label,
           " />
   </hbox>
 </groupbox>
