Bug 1814266 - Use moz-support-link for the "identify-popup-custom-root-learn-more" label. r=tgiles,flod
Differential Revision: https://phabricator.services.mozilla.com/D173701

--- a/browser/themes/shared/controlcenter/panel.css
+++ b/browser/themes/shared/controlcenter/panel.css
@@ -282,6 +282,10 @@
   }
 }
 
+#identity-popup-content-verifier-unknown > label {
+  display: inline;
+}
+
 /* CONTENT BLOCKING / TRACKING PROTECTION */
 
 #protections-popup-sendReportView-heading,
