Bug 1826664 - Should have cursor: pointer on the summary element when using the second variant. R?mconley r=mconley
Differential Revision: https://phabricator.services.mozilla.com/D174942

--- a/browser/themes/shared/migration/migration-wizard.css
+++ b/browser/themes/shared/migration/migration-wizard.css
@@ -170,6 +170,10 @@ details:not([open]) summary {
   margin-block-end: 16px;
 }
 
+summary {
+  cursor: pointer;
+}
+
 #resource-type-list {
   padding: 0;
 }
