--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -313,8 +313,7 @@ menuitem.bookmark-item {
   }
 
   #urlbar:not(:-moz-lwtheme, [focused="true"]) > #urlbar-background,
-  #searchbar:not(:-moz-lwtheme, :focus-within),
-  .findbar-textbox:not(:-moz-lwtheme, :focus) {
+  #searchbar:not(:-moz-lwtheme, :focus-within) {
     border-color: ThreeDShadow;
   }
 }
