--- a/browser/themes/shared/migration/migration-wizard.css
+++ b/browser/themes/shared/migration/migration-wizard.css
@@ -142,6 +142,10 @@ div[name="page-selection"][show-import-all] #select-all  {
   display: flex;
 }
 
+div[name="page-selection"][migrator-type="browser"] > .buttons > #import-from-file,
+div[name="page-selection"][migrator-type="file"] > .buttons > #import,
+div[name="page-selection"][migrator-type="file"] > .resource-selection-details,
+div[name="page-selection"][migrator-type="file"] > .resource-selection-preamble,
 div[name="page-selection"][show-import-all] .resource-selection-preamble {
   display: none;
 }
