--- a/toolkit/components/pdfjs/content/web/viewer-geckoview.css
+++ b/toolkit/components/pdfjs/content/web/viewer-geckoview.css
@@ -1080,7 +1080,7 @@
   --dir-factor: 1;
   --scale-select-width: 140px;
 
-  --toolbar-icon-opacity: 1;
+  --toolbar-icon-opacity: 0.7;
   --doorhanger-icon-opacity: 0.9;
 
   --main-color: rgba(12, 12, 13, 1);
@@ -1219,18 +1219,15 @@ body {
   bottom: 5%;
   right: 5%;
   background-color: transparent;
-  transition-property: opacity;
-  transition-duration: 400ms;
+  z-index: 100000;
 }
 
 #floatingToolbar.show {
-  z-index: 100000;
-  opacity: 1;
+  display: block;
 }
 
 #floatingToolbar:not(show) {
-  z-index: -1;
-  opacity: 0;
+  display: none;
 }
 
 .toolbarButton {
