Bug 1828459 - Update PDF.js to new version f1b005d7b805e38e731d929b47d78b125765aabe r=pdfjs-reviewers,marco
Differential Revision: https://phabricator.services.mozilla.com/D175658

--- a/toolkit/components/pdfjs/content/web/viewer-geckoview.css
+++ b/toolkit/components/pdfjs/content/web/viewer-geckoview.css
@@ -948,6 +948,15 @@
   transform: rotate(270deg) translateX(-100%);
 }
 
+#hiddenCopyElement {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  display: none;
+}
+
 .pdfViewer {
   /* Define this variable here and not in :root to avoid to reflow all the UI
      when scaling (see #15929). */
@@ -1262,11 +1271,6 @@ body {
   opacity: 0.5;
 }
 
-.toolbarButton:hover,
-.toolbarButton:focus-visible {
-  backdrop-filter: blur(20px) contrast(200%) invert(100%);
-}
-
 .toolbarButton::before {
   display: inline-block;
   width: 100%;
@@ -1279,10 +1283,6 @@ body {
 
 .toolbarButton::before {
   opacity: var(--toolbar-icon-opacity);
-}
-
-.toolbarButton:hover::before {
-  backdrop-filter: invert(60%);
 }
 
 #download::before {
