Bug 1827049 - Don't let the find status and checkboxes shrink. r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D175031

--- a/toolkit/themes/shared/findbar.css
+++ b/toolkit/themes/shared/findbar.css
@@ -138,11 +138,18 @@ html|input.findbar-textbox[flash="true"] {
 .findbar-container > checkbox,
 .findbar-label {
   margin: 0 8px;
+  flex-shrink: 0;
 }
 
 .findbar-find-status,
 .found-matches {
   margin-inline-start: 12px;
+}
+
+.findbar-find-status {
+  /* Don't allow the status to shrink: having it overflow horizontally is
+   * better than vertically centering it but missing the start of the status */
+  flex-shrink: 0;
 }
 
 .findbar-find-status[status="notfound"] {
